--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,3 @@
-VITE_API_BASE=https://your-domain.com
+VITE_API_BASE="https://mywebautomationagent.duckdns.org"
 
-VITE_WS_URL_BASE=wss://your-domain.com
+VITE_WS_URL_BASE="wss://mywebautomationagent.duckdns.org"
